--- a/src/main/resources/static/views/header.html
+++ b/src/main/resources/static/views/header.html
@@ -3,16 +3,16 @@
 <div class="nav index" style="height: 80px;">
 	<div class="layui-container">
 		<!-- 公司logo -->
-		<div class="nav-logo"> <a href="index.html"> <img src="../img/header/oppo.png" alt="网络公司"> </a> </div>
+		<div class="nav-logo"> <a href="index.html"> <img src="../img/header/log.png" alt=""> </a> </div>
 		<div class="nav-list">
 			<button> <span class=""></span><span style="display: block;"></span><span class=""></span> </button>
 			<ul class="layui-nav" lay-filter="">
 				<li class="layui-nav-item"><a href="/">Product</a></li>
 				<li class="layui-nav-item"><a href="#">Support</a></li>
 				<li class="layui-nav-item"><a href="#">About Us</a></li>
-				<li class="layui-nav-item"><a href="javascript:page_jump('/account');">Account</a></li>
-				<li class="layui-nav-item"><a href="javascript:page_jump('/cart');"><img src="../img/header/shop.png"></a></li>
-				<li class="layui-nav-item"><a href="/login"><img src="../img/header/login.png"></a></li>
+				<li class="layui-nav-item"><a href="javascript:page('account');">Account</a></li>
+				<li class="layui-nav-item"><a href="javascript:page('cart');"><img src="../img/header/cart.png"></a></li>
+				<li class="layui-nav-item"><a href="javascript:page('login')"><img src="../img/header/login.png"></a></li>
 				<span class="layui-nav-bar" style="left: 342px; top: 78px; width: 0px; opacity: 0;"></span>
 			</ul>
 		</div>
