--- a/src/main/resources/static/css/account.css
+++ b/src/main/resources/static/css/account.css
@@ -1,5 +1,9 @@
 @charset "utf-8";
 
+body{
+	overflow-x: hidden;
+}
+
 .store-order {
 	/* height: 698px; */
 	width: 100%;
@@ -166,6 +170,7 @@
 
 .store-order .right .order-message .tr2 {
 	padding: 0;
+	height: 70px;
 }
 
 .right .order-message .tr2 .tr2-1 {
@@ -223,12 +228,12 @@
 
 .right .order-message .tr2 .tr2-4>span {
 	display: block;
-	width: 60px;
-	height: 18px;
-	line-height: 18px;
+	width: 85px;
+	height: 23px;
+	line-height: 23px;
 	background: #f66567;
 	color: #fff;
-	font-size: 12px;
+	font-size: 14px;
 	border-radius: 3px;
 	margin: 10px auto 0;
 	cursor: pointer;
