--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -3,16 +3,17 @@
     height: 80px;
     box-shadow: 0 3px 3px 0 #CCC;
     background: #FFF;
-    position: fixed;
-    left: 0;
-    top: 0;
-    z-index: 999;
     overflow: hidden;
-    transition: 0.3s
+    transition: 0.3s;
+    /*    left: 0;
+        top: 0;
+        z-index: 999;
+        position: fixed;*/
 }
 
 .nav.index {
-    background: rgba(255, 255, 255, 0.8);
+   /* background: rgba(255, 255, 255, 0.8);*/
+    background: #060606;
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.05);
 }
 
@@ -25,19 +26,20 @@
 .nav .layui-container {
     position: relative;
     transition: all 400ms ease-out;
+   /* margin-left: 300px;*/
 }
 
 .nav .nav-logo {
     height: 100%;
     position: absolute;
-    top: 0;
-    left: 15px;
+    top: 14px;
+    left: 95px;
     line-height: 80px;
 }
 
 .nav .nav-logo img {
-    width: 96px;
-    height: 23px;
+    width: 57px;
+    height: 40px;
 }
 
 .nav .nav-list {
@@ -94,7 +96,7 @@
 
 .nav .layui-nav .layui-nav-item a {
     padding: 0 0;
-    color: #000;
+    color: white;
 }
 
 .nav .layui-nav-bar,
@@ -114,7 +116,8 @@
     }
 
     .nav.index {
-        background: rgba(255, 255, 255, 0.3);
+       /* background: rgba(255, 255, 255, 0.3);*/
+        background: #060606;
     }
 
     .nav .nav-list button {
@@ -129,13 +132,13 @@
         border-radius: 0;
         margin: 0; */
 
-    /* width: auto; */
-    position: absolute;
-    top: 0;
-    left: 155px;
-    padding: 0px 9px;
-    border-radius: 0;
-    margin: 0;
+        /* width: auto; */
+        position: absolute;
+        top: 0;
+        left: 240px;
+        padding: 0px 9px;
+        border-radius: 0;
+        margin: 0;
     }
 
     .nav .layui-nav .layui-nav-item {
