--- a/src/main/resources/static/views/cart.html
+++ b/src/main/resources/static/views/cart.html
@@ -2,159 +2,88 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>【丝芙兰】购物车</title>
-        <link rel="stylesheet" href="../css/base.css"/>
-        <link rel="stylesheet" href="../css/header.css"/>
+        <title>shopping cart</title>
+        <link rel="icon" href="../img/header/favicon.ico" type="images/x-ico"/>
         <link rel="stylesheet" href="../css/cart.css"/>
         <script type="text/javascript" src="../js/jquery-3.7.1.min.js"></script>
         <script type="text/javascript" src="../js/utils.js"></script>
         <script type="text/javascript" src="../js/cart.js"></script>
-        <script type="text/javascript" src="../js/brand.js"></script>
     </head>
     <body>
 
         <div class="header-all"></div>
-
-        <div id="headTop" class="t">
-            <div id="topContent" class="c">
-				<span class="topContentLeft l">
-					<span class="a1">欢迎来到丝芙兰</span>
-					<a class="pleaseLogin" href="#">184****2829</a>
-					<em></em>
-					<li></li>
-					<a class="pleaseregister" href="index.html">退出</a>
-				</span>
-                <span class="topContentRight r">
-					<span>
-						<span class="icon1"></span>
-						<a href="#" class="a1">我的丝芙兰</a>
-						<span class="icon2"></span>
-						<ul class="icon2Hover">
-							<li>
-								<a href="#">我的订单</a>
-							</li>
-						</ul>
-					</span>
-					<span>
-						<span class="icon3"></span>
-						<a href="#" class="a1">会员俱乐部</a>
-					</span>
-					<span>
-						<span class="icon4"></span>
-						<a href="#" class="a1">手机丝芙兰</a>
-					</span>
-					<span>
-						<a href="#">美丽事业</a>
-					</span>
-					<span>
-						<a href="#">帮助中心</a>
-					</span>
-				</span>
-            </div>
-        </div>
-        <div id="carHeader">
-            <div class="carHeaderInfo t">
-                <div class="carHeaderInfoContent c">
-                    <div class="carHeaderContentLeft l">
-                        <a href="index.html"><img src="../img/cart/search_Logo1.png"/></a>
-                    </div>
-                    <div class="carHeaderContentRight r">
-                        <div class="carHeaderContentRightBorder"></div>
-                        <div class="carHeaderRightStep l carHeaderRightStep1">
-                            <em class="checkoutStep"></em>
-                        </div>
-                        <div class="carHeaderRightStep l carHeaderRightStep2">
-                            <em class="checkoutStep"></em>
-                        </div>
-                        <div class="carHeaderRightStep l carHeaderRightStep3">
-                            <em class="checkoutStep"></em>
+            <div id="body" style="position: static" class="body-cart">
+                <div id="chekoutBody">
+                    <div class="checkoutProduct t">
+                        <div class="checkoutProductInfo c">
+                            <div class="checkoutTable">
+                                <em class="checkBox checkIcon" logo="all"></em>
+                                <ul class="checkoutTableHeader">
+                                    <li>select all</li>
+                                    <li>Product info</li>
+                                    <li>price</li>
+                                    <li>amount</li>
+                                    <li>total</li>
+                                    <li>operate</li>
+                                </ul>
+                                <div class="checkoutProductBody">
+                                    <div class="productBodyItem">
+                                        <!--<div class="productBodyItemContent" pId="${product.id}">
+                                            <em class="checkBox checkIcon"></em>
+                                            <a class="itemImg" href=""><img src="${picMap.get(product.id)}"/></a>
+                                            <div class="itemInfo">
+                                                <h5>brand</h5>
+                                                <a href="">productName</a>
+                                                <div><span>specification<i></i></span></div>
+                                            </div>
+                                            <div class="itemInfoUnion1">
+                                                <span class="itemPice">price</span>
+                                            </div>
+                                            <div class="itemInfoUnion2">
+                                                <div class="itemInfoUnion2Module lelt">
+                                                    <i class="itemMinus item_ma_css l" data-id="${product.id}">-</i>
+                                                    <input type="text" class="itemNum l" value="0"/>
+                                                    <i class="itemAdd item_ma_css l" data-id="${product.id}">+</i>
+                                                </div>
+                                            </div>
+                                            <div class="itemInfoUnion3">
+                                                <span class="sumNum">total</span>
+                                            </div>
+                                            <div class="itemInfoUnion4">
+                                                <i class="delete" data-id="${product.id}"></i>
+                                            </div>
+                                        </div>-->
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div id="checkoutPosition">
-            <div class="checkoutPositionInfo t">
-                <div class="checkoutPositionContent c">
-                    <div class="checkoutPositionContentP">
-                        您的购物车清单如含近效期产品，该近效期产品不支持7天无理由退货，近效期产品为页面有特别标示有效期信息的产品。
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id="chekoutBody">
-            <div class="checkoutProduct t">
-                <div class="checkoutProductInfo c">
-                    <div class="checkoutTable">
-                        <em class="checkBox checkIcon"  logo="all"></em>
-                        <ul class="checkoutTableHeader">
-                            <li>全选</li>
-                            <li>商品信息</li>
-                            <li>单价（元）</li>
-                            <li>数量</li>
-                            <li>小计（元）</li>
-                            <li>操作</li>
-                        </ul>
-                        <div class="checkoutProductBody">
-                            <div class="productBodyItem">
-
+                <div id="checkSubmit" class="t">
+                    <div id="checkSubmitInfo"  class="c checkSubmitInfo" style="margin-top: 100px;">
+                        <div class="checkSubmitInfoBooking">
+                            <div class="checkSubmitInfoLeft l">
+                                <em class="checkBox checkIcon l" logo="all"></em>
+                                <a class="allClick">select all</a>
+                                <a class="allDelete">batch delet</a>
+                                <div class="split"></div>
+                                <a class="callService">customer service</a>
+                            </div>
+                            <div class="checkSubmitInfoRight r">
+                                <ul>
+                                    <li>
+                                        <span><span id="itemTotal">0</span><span>&nbsp; items&nbsp; selected</span></span>
+                                    </li>
+                                    <li>
+                                        <span>Total：<span style="color: red;">$<span class="lumpSum" >0.00</span></span></span>
+                                    </li>
+                                </ul>
+                                <div class="rightSubmit r">Pay now</div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div id="checkoutCoupons">
-            <div class="checkoutCouponsInfo t">
-                <div class="CouponsInfoContent c">
-                    <p class="CouponsInfoContentH c">
-                        <span class="sp1">优惠券</span>
-                        <span class="sp2">*了解优惠券</span>
-                        <span class="sp3">使用规则</span>
-                        <input type="button" value="+ 输入优惠码"/>
-                    </p>
-                    <div class="CouponsInfoContentBody">
-                        <div class="couponBody">
-                            <div class="couponNone"></div>
-                            <span>您目前没有优惠券</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id="checkSubmit" class="t">
-            <div class="checkSubmitInfo c">
-                <div class="checkSubmitInfoBooking">
-                    <div class="checkSubmitInfoLeft l">
-                        <em class="checkBox checkIcon l" logo="all"></em>
-                        <a class="allClick">全选</a>
-                        <a class="allDelete">批量删除</a>
-                        <div class="split"></div>
-                        <a class="callService">联系客服</a>
-                    </div>
-                    <div class="checkSubmitInfoRight r">
-                        <ul>
-                            <li>
-                                <span>已选<span id="itemTotal">0</span>件商品，合计<span class="pri" style="font-size: 14px;color: #000;">$<span class="lumpSum">0.00</span></span></span>
-                            </li>
-                            <li>
-                                <span>商品总额：<span class="lumpSum" style="color: #000;">$<span>0.00</span></span></span>
-                                <div class="rightSave"><i></i><span>共节省：$<span>0.00</span></span></div>
-                            </li>
-                        </ul>
-                        <div class="rightSubmit r">立即结算</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <footer id="Footer">
-            <!--封装-->
-        </footer>
+        <div class="footer-all"></div>
     </body>
-    <script>
-        //公共head
-        $('header').load("commonHtml/header.html");
-        //公共footer
-        $('footer').load("commonHtml/footer.html");
-    </script>
 </html>
